fixing score visibilty

--- a/firstgame/mariogame.css
+++ b/firstgame/mariogame.css
@@ -9,6 +9,19 @@ body {
     background: url("./mario5.jpg");
 
 }
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: #39ff14;
+}
+
+p {
+    font-family: fantasy;
+    font-style: bold;
+    text-align: center;
+    color: #39ff14;
+}
+
 
 #gamearea {
     width: 540px;
@@ -16,10 +29,10 @@ body {
 
     background: url("./soil.png");
     background-size: cover;
-    border: 4px solid #39ff14;
-    border-radius: 35px;  
+    border: 3px #39ff14;
+    border-radius: 25px;  
 
-    margin:0 auto;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
